--- a/LearnMoto/app/src/main/res/layout/activity_nursery_english.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_nursery_english.xml
@@ -27,56 +27,67 @@
                 android:src="@drawable/ic_menu"/>
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="READ"
-                android:textSize="20dp"
-                android:layout_gravity="center"/>
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_gallery_dialog"/>
-
-            <TextView
-                android:id="@+id/storytelling"
-                android:layout_marginVertical="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Story"
-                android:textAlignment="center"/>
+                android:text="Where to read"
+                android:textAlignment="center"
+                android:textSize="22sp"
+                android:fontFamily="@font/aloja"
+                android:textColor="@color/black"
+                android:layout_marginVertical="40dp"/>
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:layout_gravity="center"
-                android:layout_marginVertical="15dp">
+                android:layout_gravity="center">
 
-                <ImageView
-                    android:onClick="Play"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="5dp"
-                    android:src="@drawable/ic_play"/>
+                    android:orientation="vertical"
+                    android:layout_marginHorizontal="20dp"
+                    android:id="@+id/pdf">
 
-                <ImageView
-                    android:onClick="Pause"
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:onClick="pdf"
+                        android:src="@drawable/ic_pdf"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="PDF"
+                        android:textColor="@color/black"
+                        android:layout_gravity="center"/>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="5dp"
-                    android:src="@drawable/ic_pause"/>
+                    android:layout_marginHorizontal="20dp"
+                    android:orientation="vertical"
+                    android:id="@+id/story">
 
-                <ImageView
-                    android:onClick="Stop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="5dp"
-                    android:src="@drawable/ic_stop"/>
+                    <ImageView
+                        android:onClick="story"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/ic_story"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Story"
+                        android:textColor="@color/black"
+                        android:layout_gravity="center"/>
+
+                </LinearLayout>
 
             </LinearLayout>
-
         </LinearLayout>
 
     </ScrollView>
