--- a/LearnMoto/app/src/main/res/layout/activity_nursery_english.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_nursery_english.xml
@@ -15,33 +15,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_margin="10dp">
 
-            <!--        <include layout="@layout/toolbar"/>-->
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:onClick="clickmenu"
-                android:src="@drawable/ic_menu"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Where to read"
-                android:textAlignment="center"
-                android:textSize="22sp"
-                android:fontFamily="@font/aloja"
-                android:textColor="@color/black"
-                android:layout_marginVertical="40dp"/>
-
-
+            <include layout="@layout/mytoolbar"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
