--- a/LearnMoto/app/src/main/res/layout/activity_stories.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_stories.xml
@@ -13,17 +13,33 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-
-        <ImageView
-            android:onClick="BacktoEnglishClass"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrowback"
-            android:layout_marginVertical="15dp"/>
+            android:orientation="horizontal"
+            android:layout_marginVertical="15dp">
+
+            <ImageView
+                android:onClick="BacktoEnglishClass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrowback"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="25sp"
+                android:text="Stories"
+                android:fontFamily="@font/aloevera"
+                android:textColor="@color/fontColor"/>
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="10dp"
             android:id="@+id/stories"/>
 
 
