--- a/LearnMoto/app/src/main/res/layout/activity_nursery_english.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_nursery_english.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:id="@+id/mydrawer_layout"
-    tools:context=".Nursery.NurseryEnglish">
+    tools:context=".Nursery.English.NurseryEnglish">
 
     <ScrollView
         android:layout_width="match_parent"
