--- a/LearnMoto/app/src/main/res/layout/activity_view_pdf.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_view_pdf.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ViewPDF">
+    tools:context=".PDF.EnglishViewPDF">
 
     <LinearLayout
         android:layout_width="match_parent"
