--- a/LearnMoto/app/src/main/res/layout/activity_science_pdf.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_science_pdf.xml
@@ -20,7 +20,7 @@
             android:layout_marginVertical="15dp">
 
             <ImageView
-                android:onClick="BacktoEnglishClass"
+                android:onClick="BacktoScienceClass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_arrowback"/>
