--- a/LearnMoto/app/src/main/res/layout/check_internet_dialog.xml
+++ b/LearnMoto/app/src/main/res/layout/check_internet_dialog.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="center"
-    android:background="@drawable/bg_roundcorner">
+    android:background="@color/light_green">
 
     <ImageView
         android:layout_width="wrap_content"
