--- a/LearnMoto/app/src/main/res/layout/activity_student_login.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_student_login.xml
@@ -49,7 +49,8 @@
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_input"
-        android:drawableLeft="@drawable/custom_icon_key"
+        android:drawableStart="@drawable/custom_icon_key"
+        android:drawableEnd="@drawable/custom_icon_toggle_eye"
         android:hint="Password"
         android:textSize="18dp"
         android:layout_gravity="center"
