--- a/LearnMoto/app/src/main/res/layout/assign_class_level.xml
+++ b/LearnMoto/app/src/main/res/layout/assign_class_level.xml
@@ -30,7 +30,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/SaveLevelList"
+            android:id="@+id/AddLevelList"
             android:layout_width="150dp"
             android:layout_marginHorizontal="5sp"
             android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
             android:text="ADD"/>
 
         <Button
-            android:id="@+id/CloseWindow"
+            android:id="@+id/Save"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5sp"
