View Assigned Level (No Function)

--- a/LearnMoto/app/src/main/res/layout/activity_teacher_view.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_teacher_view.xml
@@ -151,20 +151,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
                     android:orientation="vertical"
+                    android:visibility="gone"
                     android:animateLayoutChanges="true"
                     android:padding="10dp">
 
-<!--                    <androidx.recyclerview.widget.RecyclerView-->
-<!--                        android:padding="10dp"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:id="@+id/rvClass"/>-->
-
-                    <ListView
-                        android:id="@+id/listClass"
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:padding="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="5sp"/>
+                        android:id="@+id/rvClass"/>
+
+<!--                    <ListView-->
+<!--                        android:id="@+id/listClass"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:padding="5sp"/>-->
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
