--- a/LearnMoto/app/src/main/res/layout/level_list.xml
+++ b/LearnMoto/app/src/main/res/layout/level_list.xml
@@ -19,23 +19,12 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/childListImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:id="@+id/levelImage"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_centerHorizontal="true"
                 android:padding="5dp"
-                android:src="@drawable/icon_children_list" />
-
-            <TextView
-                android:id="@+id/LevelName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/childListImage"
-                android:layout_centerHorizontal="true"
-                android:text="Level"
-                android:textSize="20dp"
-                android:textAlignment="center"
-                android:textStyle="bold" />
+                android:src="@drawable/kinder_logo" />
 
         </RelativeLayout>
 
