--- a/LearnMoto/app/src/main/res/drawable/ic_camera.xml
+++ b/LearnMoto/app/src/main/res/drawable/ic_camera.xml
@@ -1,4 +1,4 @@
-<vector android:height="40dp" android:tint="#5ACA69"
+<vector android:height="40dp" android:tint="#B7000000"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M12,12m-3.2,0a3.2,3.2 0,1 1,6.4 0a3.2,3.2 0,1 1,-6.4 0"/>
