--- a/LearnMoto/app/src/main/res/layout/activity_teacher_profile.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_teacher_profile.xml
@@ -7,21 +7,320 @@
     tools:context=".Teacher.TeacherProfile"
     android:background="@drawable/background">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/ScrollViewProfile"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginVertical="15dp"
-        android:padding="12dp">
+        android:layout_height="match_parent">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="PROFILE"
-            android:textSize="50dp"
-            android:gravity="center"/>
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@color/transparent1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:gravity="center|left"
+                    android:orientation="horizontal"
+                    android:paddingLeft="25dp"
+                    android:layout_marginBottom="15dp">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        app:cardCornerRadius="40dp">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/profile"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_user_circle"
+                            app:civ_border_color="@color/white"
+                            app:civ_border_width="2dp" />
+
+                    </androidx.cardview.widget.CardView>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/NameUser"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:text="Name"
+                            android:layout_marginHorizontal="5dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"
+                            android:textSize="22sp" />
+
+                        <TextView
+                            android:id="@+id/txtEditProfile"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableEnd="@drawable/ic_edit"
+                            android:text="Edit Profile"
+                            android:layout_marginHorizontal="5dp"
+                            android:textStyle="bold"
+                            android:onClick="EditProfile"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/EditProfilePhoto"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_camera"
+                    android:layout_marginStart="45dp"
+                    android:visibility="gone"
+                    android:onClick="TakePhoto"
+                    android:layout_marginTop="-70dp"/>
+
+                <Button
+                    android:id="@+id/UpdatePicture"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="right"
+                    android:layout_margin="10dp"
+                    android:onClick="UpdateImage"
+                    android:visibility="gone"
+                    android:background="@drawable/ic_checkmark"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Profile"
+                android:textColor="@color/white"
+                android:layout_marginHorizontal="15dp"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/BasicInformationCardView"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+                android:layout_gravity="center"
+                app:cardBackgroundColor="@color/light_green"
+                app:contentPadding="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:id="@+id/BasicInformationLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_id"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Basic Information"
+                            android:textColor="@color/fontColor"
+                            android:fontFamily="@font/aloevera"
+                            android:layout_margin="5dp"
+                            android:layout_marginLeft="50dp"
+                            android:textSize="20dp" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/BasicInformationArrowBtn"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:onClick="ExpandBasicInformation"
+                        android:background="@drawable/ic_arrow_down" />
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:id="@+id/BasicInformationContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    android:background="@color/transparent1"
+                    android:padding="10dp">
+
+                    <EditText
+                        android:id="@+id/et_teacherName"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:padding="10dp"
+                        android:background="@drawable/custom_input"
+                        android:drawableLeft="@drawable/custom_icon_name"
+                        android:hint="Name"
+                        android:layout_marginVertical="15dp"/>
+                    <EditText
+                        android:id="@+id/et_teacherAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:padding="10dp"
+                        android:background="@drawable/custom_input"
+                        android:drawableLeft="@drawable/custom_icon_address"
+                        android:hint="Address"
+                        android:layout_marginVertical="15dp"/>
+
+                    <EditText
+                        android:id="@+id/et_PhoneNumber"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:padding="10dp"
+                        android:background="@drawable/custom_input"
+                        android:drawableLeft="@drawable/custom_icon_phone"
+                        android:hint="Phone number"
+                        android:layout_marginVertical="15dp"/>
+
+                    <Button
+                        android:id="@+id/UpdateBasicInfoBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:text="Update"
+                        android:textColor="@color/white"
+                        android:background="@color/yellowOrange"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Account"
+                android:textColor="@color/white"
+                android:layout_marginHorizontal="15dp"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/changepass_cv"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                app:cardBackgroundColor="@color/light_green"
+                app:contentPadding="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:id="@+id/AccountInformationLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/icon_changepass"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_user_round"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Account Information"
+                            android:textColor="@color/fontColor"
+                            android:fontFamily="@font/aloevera"
+                            android:layout_margin="5dp"
+                            android:layout_marginLeft="50dp"
+                            android:textSize="20dp" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/AccountInformationArrowBtn"
+                        android:onClick="ExpandAccountInformation"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/ic_arrow_down" />
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:id="@+id/AccountInformationContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:orientation="vertical"
+                    android:background="@color/transparent1"
+                    android:visibility="gone"
+                    android:padding="10dp">
+
+                    <EditText
+                        android:id="@+id/et_UserName"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:padding="10dp"
+                        android:background="@drawable/custom_input"
+                        android:drawableLeft="@drawable/custom_icon_user"
+                        android:hint="Username"
+                        android:layout_marginVertical="15dp"/>
+                    <EditText
+                        android:id="@+id/et_Pass"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:padding="10dp"
+                        android:background="@drawable/custom_input"
+                        android:drawableLeft="@drawable/custom_icon_key"
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:layout_marginVertical="15dp"/>
+
+                    <Button
+                        android:id="@+id/ChangePassBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:text="Change Password"
+                        android:padding="10dp"
+                        android:textColor="@color/white"
+                        android:background="@color/yellowOrange"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+
+    </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
