--- a/LearnMoto/app/src/main/res/layout/activity_teacher_profile.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_teacher_profile.xml
@@ -88,7 +88,7 @@
                     android:layout_marginTop="-70dp"/>
 
                 <Button
-                    android:id="@+id/UpdatePicture"
+                    android:id="@+id/DoneUpdatePicture"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="right"
@@ -193,6 +193,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:padding="10dp"
+                        android:maxLength="11"
                         android:background="@drawable/custom_input"
                         android:drawableLeft="@drawable/custom_icon_phone"
                         android:hint="Phone number"
@@ -205,6 +206,7 @@
                         android:layout_gravity="right"
                         android:text="Update"
                         android:textColor="@color/white"
+                        android:onClick="UpdateBasicInformation"
                         android:background="@color/yellowOrange"/>
 
                 </LinearLayout>
@@ -289,7 +291,7 @@
                         android:layout_height="50dp"
                         android:padding="10dp"
                         android:background="@drawable/custom_input"
-                        android:drawableLeft="@drawable/custom_icon_user"
+                        android:drawableStart="@drawable/custom_icon_user"
                         android:hint="Username"
                         android:layout_marginVertical="15dp"/>
                     <EditText
@@ -298,8 +300,35 @@
                         android:layout_height="50dp"
                         android:padding="10dp"
                         android:background="@drawable/custom_input"
-                        android:drawableLeft="@drawable/custom_icon_key"
-                        android:hint="Password"
+                        android:drawableStart="@drawable/custom_icon_key"
+                        android:drawableEnd="@drawable/custom_icon_toggle_eye"
+                        android:hint="Current Password"
+                        android:inputType="textPassword"
+                        android:layout_marginVertical="15dp"/>
+
+                    <EditText
+                        android:id="@+id/et_newPass"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:padding="10dp"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/custom_icon_key"
+                        android:drawableEnd="@drawable/custom_icon_toggle_eye"
+                        android:hint="New Password"
+                        android:inputType="textPassword"
+                        android:visibility="gone"
+                        android:layout_marginVertical="15dp"/>
+
+                    <EditText
+                        android:id="@+id/et_confirmPass"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:padding="10dp"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/custom_icon_key"
+                        android:drawableEnd="@drawable/custom_icon_toggle_eye"
+                        android:hint="Confirm Password"
+                        android:visibility="gone"
                         android:inputType="textPassword"
                         android:layout_marginVertical="15dp"/>
 
@@ -311,6 +340,7 @@
                         android:text="Change Password"
                         android:padding="10dp"
                         android:textColor="@color/white"
+                        android:onClick="ChangePassword"
                         android:background="@color/yellowOrange"/>
 
                 </LinearLayout>
