--- a/LearnMoto/app/src/main/res/layout/activity_teacher_profile.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_teacher_profile.xml
@@ -183,6 +183,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:padding="10dp"
+                        android:inputType="textCapWords"
                         android:background="@drawable/custom_input"
                         android:drawableLeft="@drawable/custom_icon_address"
                         android:hint="Address"
@@ -197,6 +198,7 @@
                         android:background="@drawable/custom_input"
                         android:drawableLeft="@drawable/custom_icon_phone"
                         android:hint="Phone number"
+                        android:inputType="phone"
                         android:layout_marginVertical="15dp"/>
 
                     <Button
