--- a/LearnMoto/app/src/main/res/layout/add_assign_subject.xml
+++ b/LearnMoto/app/src/main/res/layout/add_assign_subject.xml
@@ -5,10 +5,18 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+    <ImageView
+        android:id="@+id/closeSubjectDialog"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:src="@drawable/ic_close"
+        android:layout_gravity="right"
+        android:layout_margin="10dp"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select Subject"
+        android:text="Subject Levels"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:layout_marginVertical="5dp"
